# comfyui-mobile-frontend

./: .env.example  .gitignore  CHANGELOG.md  README.md  USER_GUIDE.md  __init__.py  binary_cache_io.py  conftest.py  file_utils.py  index.html  json_cache_io.py  mobile_file_prefix_aliases.py  mobile_hidden_items.py  mobile_image_preview.py  mobile_input_aliases.py  mobile_metadata.py  mobile_queue_metadata.py  mobile_video_thumbs.py  model_metadata.py  package-lock.json  package.json  pyproject.toml  restart_utils.py  tsconfig.app.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
.github/workflows/: draft_release.yml  publish_action.yml  test.yml  test_backend.yml
scripts/: compress-assets.mjs
src/: App.tsx  constants.ts  index.css
src/__tests__/: App.test.tsx
src/api/: client.ts  customNodesManagerClient.ts  loraManagerClient.ts  types.ts
src/components/: AppMenu.tsx  BackendStatusOverlay.tsx  BottomBar.tsx  Collapsible.tsx  ConnectionButton.tsx  CustomNodesManagerModal.tsx  FoldIcon.tsx  HamburgerMenu.tsx  HistoryPanel.tsx  ImageViewer.tsx  InfoIcon.tsx  LoadingSpinner.tsx  MobileWidgetModal.tsx  NodeCard.tsx  NodeList.tsx  OutputsPanel.tsx  QueuePanel.tsx  RepositionOverlay.tsx  SearchBar.tsx  SlidePanel.tsx  TextareaActions.tsx  TopBar.tsx  WidgetControl.tsx  (+2 more)
tests/: conftest.py  test_binary_cache_io.py  test_file_utils.py  test_json_cache_io.py  test_mobile_file_prefix_aliases.py  test_mobile_hidden_items.py  test_mobile_input_aliases.py  test_mobile_metadata.py  test_mobile_queue_metadata.py  test_model_metadata.py  test_restart_utils.py
(+483 files in other folders)
