[project]
name = "comfyui-mobile-frontend"
description = "A mobile-friendly user interface for ComfyUI mounted in parallel with the main frontend at /mobile"
version = "2.0.6"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/cosmicbuffalo/comfyui-mobile-frontend"
Documentation = "https://github.com/cosmicbuffalo/comfyui-mobile-frontend/blob/main/USER_GUIDE.md"
"Bug Tracker" = "https://github.com/cosmicbuffalo/comfyui-mobile-frontend/issues"

[tool.comfy]
PublisherId = "cosmicbuffalo"
DisplayName = "ComfyUI-Mobile-Frontend"
Icon = "https://avatars.githubusercontent.com/u/25158675"

